fix banner on mobile

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -99,3 +99,7 @@ a.tag {
     font-size: 20px;
     align-content: center;
 }
+
+.responsive-banner a {
+    font-size: 15px;
+}
